# algolia-agent-cli

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/tcg/: agent-config.json
src/algolia_agent/: cli.py  client.py  template.py
tests/: conftest.py  test_cli.py  test_client.py  test_template.py
