[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algolia-agent"
version = "0.1.0"
description = "CLI for Algolia Agent Studio"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["InquirerPy>=0.3.4"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
algolia-agent = "algolia_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
